@@ -1,7 +1,6 @@
 package jp.gr.java_conf.stardiopside.sound.util;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import javafx.util.StringConverter;
 
@@ -14,6 +13,6 @@ public class PathStringConverter extends StringConverter<Path> {
 
     @Override
     public Path fromString(String string) {
-        return string == null ? null : Paths.get(string);
+        return string == null ? null : Path.of(string);
     }
 }
